--- a/package.json
+++ b/package.json
@@ -21,31 +21,32 @@
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/material-bottom-tabs": "^6.2.20",
-    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
     "@supabase/supabase-js": "^2.39.7",
     "@types/react": "~18.2.45",
     "axios": "^1.6.7",
     "base64-arraybuffer": "^1.0.2",
-    "expo": "~50.0.7",
+    "expo": "^50.0.14",
     "expo-font": "~11.10.3",
     "expo-image-picker": "^14.7.1",
-    "expo-location": "^16.5.3",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "^2.15.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-maps": "^1.10.3",
+    "react-native-maps": "1.10.0",
+    "react-native-outside-press": "^1.2.2",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.7.0",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-svg": "^14.1.0",
