suggestion dropdown disappear when clicked outside

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "Favourite",
+        "navstack",
         "Pressable",
-        "supabase"
+        "supabase",
+        "upsert"
     ]
 }
